// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary text with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should render summary text with many expenses 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $2,350.01
  </h1>
</div>
`;
